@@ -90,6 +90,8 @@ dpkg (1.16.0) UNRELEASED; urgency=low
   * Fix a regression in dpkg-divert where using --rename led to a failure when
     the rename implies crossing file systems. Thanks to Durk Strooisma for
     spotting it.
+  * Use the correct mtime when installing a file with statoverrides.
+    LP: #739179
 
   [ Jonathan Nieder ]
   * Remove support for use of synchronous sync(2), due to its pernicious
